tests/NormalTests/paczka1/small_fuzzy/34802577.err
Error in line 1: RpH S834 16,6
Error in line 6: uJ0 A234 59,3
